improve: replace pull connectors with push
Infra now remotely manages clusters' users and their credentials. Previously, users would need to install "connectors" on clusters, expose these connectors via a load balancer and upgrade them. Now, users just need to provide the infra server

Why do this:
* Easier upgrades (no infra-connector to upgrade)
* Less moving parts: source of truth in one place
* Connecting clusters is easier: users run `infra destinations add` and get immediate feedback when the cluster is added.
* Much smaller per-cluster footprint: no process runs per-cluster and there's no per-cluster load balancer

Notable changes:
* Cluster destinations are now added via `infra destinations add` or via `destinations:` in the server config
* Removed default `connector` identity, and `connector` built-in role
* Removed connector from helm chart
